<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soapbox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_anon">Register or Login here -&gt;</string>
    <string name="title_activity_post_shout">PostShoutActivity</string>
    <string name="title_activity_login">Login or Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_email">Email:</string>
    <string name="label_verify_pass">Verify Password:</string>
    <string name="change_location_spinner_prompt">Choose a City</string>
    <string name="title_activity_comment">Comment</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_post">Post</string>

</resources>