<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="6" >

    <TextView
        android:id="@+id/register_fragment_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_row="0"
        android:text="@string/label_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_fragment_email_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="10dp"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register_fragment_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_row="1"
        android:text="@string/label_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_fragment_username_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="10dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/register_fragment_password1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:text="@string/label_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_fragment_password1_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="10dp"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/register_fragment_password2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_row="3"
        android:text="@string/label_verify_pass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_fragment_password2_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="10dp"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/register_fragment_location_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_row="4"
        android:gravity="center" />

    <Button
        android:id="@+id/register_fragment_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_row="5"
        android:onClick="register"
        android:text="@string/register" />

</GridLayout>